--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,4 @@
 recursive-include recastcontrolcenter/templates *
 recursive-include recastcontrolcenter/recast_interface_templates *
 recursive-include recastcontrolcenter/static *
+recursive-include recastcontrolcenter/resources *
