--- a/recastcontrolcenter/resources/config.yaml
+++ b/recastcontrolcenter/resources/config.yaml
@@ -3,3 +3,5 @@ RECAST_RESULT_BASE: "/home/analysis/recast/recaststorage/results"
 RECAST_CELERYAPP: 'recastbackend.fromenvapp'
 RECAST_GITHUBSECRET: ''
 RECAST_ZENODO_TOKEN: ''
+RECAST_SSL_CERTFILE: 'server.crt'
+RECAST_SSL_KEYFILE: 'server.key'
