--- a/recastcontrolcenter/resources/config.yaml
+++ b/recastcontrolcenter/resources/config.yaml
@@ -5,3 +5,9 @@ RECAST_GITHUBSECRET: ''
 RECAST_ZENODO_TOKEN: ''
 RECAST_SSL_CERTFILE: 'server.crt'
 RECAST_SSL_KEYFILE: 'server.key'
+RECAST_OAUTH_TOKENURL: 'https://oauth.web.cern.ch/OAuth/Token'
+RECAST_OAUTUH_AUTHORIZEURL: 'https://oauth.web.cern.ch/OAuth/Authorize'
+RECAST_OAUTH_APPID: 'recastcontrol'
+RECAST_OAUTH_SECRET: ''
+RECAST_OAUTH_REDIRECT_ROUTE: '/oauth'
+RECAST_BASEURL: 
