add checkmate analysis

--- a/recastcontrolcenter/resources/backendconfig.yml
+++ b/recastcontrolcenter/resources/backendconfig.yml
@@ -2,6 +2,9 @@ resultviewconfig:
   - analysis: 1
     backend: capbackend
     blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
+  - analysis: 2
+    backend: capbackend
+    blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
   - analysis: 3
     backend: capbackend
     blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
