default blueprints per plugin

--- a/recastcontrolcenter/resources/backendconfig.yml
+++ b/recastcontrolcenter/resources/backendconfig.yml
@@ -1,10 +1,6 @@
 blueprintconfig:
   - prefix: yadageresult
     blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
-resultviewconfig:
-  - wflowconfigname: stopcheckmate
-    blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
-  - wflowconfigname: 'atlas_ewksusy_2l'
-    blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
-  - wflowconfigname: 'dummyconfig'
+defaultviews:
+  - plugin: yadageworkflow
     blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
