--- a/recastcontrolcenter/resources/backendconfig.yml
+++ b/recastcontrolcenter/resources/backendconfig.yml
@@ -4,3 +4,5 @@ blueprintconfig:
 defaultviews:
   - plugin: yadageworkflow
     blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
+  - plugin: yadagecombo
+    blueprint: recastresultblueprints.capbackend_result.blueprint:blueprint
