--- a/recastcontrolcenter/resources/config.yaml
+++ b/recastcontrolcenter/resources/config.yaml
@@ -12,3 +12,4 @@ RECAST_OAUTH_REDIRECT_ROUTE: '/oauth'
 RECAST_BASEURL: https://recast-control.cern.ch
 RECAST_SERVER_PORT: 8000
 RECAST_OAUTH_DUMMYLOGIN: false
+RECAST_CATALOGUE_FILE: /recastdata/catalogue.json
